[project]
name = "file_enrichment"
version = "0.1.0"
description = "The file enrichment workflow pipeline"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi>=0.121.0,<0.122.0",
    "pydantic>=2.10.4,<3.0.0",
    "python-magic>=0.4.27,<0.5.0",
    "binaryornot>=0.4.4,<0.5.0",
    "py7zr>=0.22.0,<0.23.0",
    "rarfile>=4.2,<5.0",
    "minio>=7.2.14,<8.0.0",
    "requests>=2.32.3,<3.0.0",
    "lief>=0.17.2,<0.18.0",
    "olefile>=0.47,<0.48",
    "yara-x>=1.1.0,<2.0.0",
    "pymupdf>=1.26.7,<2.0.0",
    "plyara>=2.2.7,<3.0.0",
    "common",
    "chromium",
    "nemesis_dpapi",
    "file_linking",
    "file_enrichment_modules",
    "structlog>=25.1.0,<26.0.0",
    "colorlog>=6.9.0,<7.0.0",
    "psycopg[pool]>=3.2.9,<4.0.0",
    "pyarrow>=19.0.1,<20.0.0",
    "msoffcrypto-tool>=5.4.2,<6.0.0",
    "oletools>=0.60.2,<0.61.0",
    "pypykatz>=0.6.11,<0.7.0",
    "cryptography>=46.0.3,<47.0.0",
    "uvicorn>=0.37.0,<0.38.0",
    "regipy>=5.2.0,<6.0.0",
    "dapr-ext-fastapi==1.16.0",
    "dapr-ext-workflow==1.16.0",
    "dapr==1.16.0",
    "durabletask-dapr==0.2.0a8",
    "protobuf==6.31.1",
    "pillow>=11.3.0,<12.0.0",
    "opentelemetry-api>=1.38.0,<2.0.0",
    "opentelemetry-sdk>=1.38.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0,<2.0.0",
    "presidio-analyzer>=2.2.360,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pydecipher",
    "oscrypto",
    "async-lru>=2.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "watchfiles>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["file_enrichment"]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }
chromium = { path = "../../libs/chromium", editable = true }
nemesis_dpapi = { path = "../../libs/nemesis_dpapi", editable = true }
file_linking = { path = "../../libs/file_linking", editable = true }
file_enrichment_modules = { path = "../../libs/file_enrichment_modules", editable = true }
pydecipher = { git = "https://github.com/HarmJ0y/pydecipher.git" }
oscrypto = { git = "https://github.com/wbond/oscrypto.git", rev = "d5f3437" }

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
