[project]
name = "housekeeping"
version = "0.1.0"
description = "Cleans up expired database entries and files."
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi>=0.121.0,<0.122.0",
    "uvicorn>=0.34.0,<0.35.0",
    "dapr==1.16.0",
    "dapr-ext-fastapi==1.16.0",
    "structlog>=25.1.0,<26.0.0",
    "pydantic>=2.10.4,<3.0.0",
    "psycopg>=3.2.4,<4.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "common",
    "asyncpg>=0.30.0,<0.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "watchfiles>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["housekeeping"]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }
