[project]
name = "web_api"
version = "0.1.0"
description = "The frontend API for Nemesis"
authors = [{name = "SpecterOps"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi[all]>=0.121.0,<0.122.0",
    "structlog>=25.1.0,<26.0.0",
    "dapr==1.16.0",
    "pydantic>=2.10.4,<3.0.0",
    "uvicorn>=0.34.0,<0.35.0",
    "python-multipart>=0.0.20,<0.1.0",
    "minio>=7.2.14,<8.0.0",
    "common",
    "nemesis_dpapi",
    "tomli>=2.2.1,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "requests>=2.32.3,<3.0.0",
    "dapr-ext-fastapi==1.16.0",
    "psycopg[pool]>=3.2.9,<4.0.0",
    "pytsk3>=20250312",
    "watchdog>=6.0.0,<7.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "markdown>=3.9,<4.0",
    "httpx>=0.28.1,<0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "watchfiles>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web_api"]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }
nemesis_dpapi = { path = "../../libs/nemesis_dpapi", editable = true }
